# AMAV

./: .rosinstall  .rosinstall.bak  CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
assignment_1_code/assignment_1/: CMakeLists.txt
assignment_1_code/assignment_1/src/: forward.py  inverse.py  services.py
assignment_1_code/assignment_1/src/assignment_1/: kinematics.py
assignment_1_code/wheeled_robot_kinematics/: CMakeLists.txt
assignment_1_code/wheeled_robot_kinematics/src/: kinematics_test.py
hector_quadrotor-indigo-devel/hector_quadrotor_pose_estimation/: CMakeLists.txt~
launch/: turtlemimic.launch
learning_tf/: CMakeLists.txt  CMakeLists.txt~  package.xml
learning_tf/launch/: start_demo.launch
msg/: Packet1.msg
pixhawkcmd/: CMakeLists.txt  CMakeLists.txt~  README  package.xml
pixhawkcmd/src/: marker_quat.cpp  pixhawk_send.cpp  pixhawk_sendV2.cpp  pixhawk_sendV2.cpp~  pixhawk_sendV3.cpp  pixhawk_sendV3.cpp~  quat_euler.cpp  quat_euler.cpp~
src/: add_two_ints_client.cpp  add_two_ints_server.cpp  comm.cpp  comm.cpp~  comm1.cpp  comm1.cpp~  mimic.cpp  offb_node.cpp  offb_node.cpp~  talker.cpp
